# accountr

./: .env.example  .gitignore  README.md  accountr.db  accountr.sql  database_create.py  pyproject.toml
doc/: README.md  specification.md
src/accountr/: app.py  auth.py  config.py  database_create.py
src/accountr/blueprints/: __init__.py  auth.py  categories.py  operations.py  report.py  types.py  user.py  users.py
src/accountr/services/: __init__.py  auth.py  base.py  categories.py  operations.py  report.py  types.py  user.py  users.py
test/: categories.postman_collection.json  operation types.postman_collection.json  operations.postman_collection.json  report.postman_collection.json  users.postman_collection.json  Категории.postman_collection.json  Операции.postman_collection.json  Типы операций.postman_collection.json
