[tool.poetry]
name = "accountr"
version = "0.1.0"
description = ""
authors = ["Infernal-Silence <linka-pink@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.13.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
